todo-k3d/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo
  type: NodePort  
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
